# rat_project

./: Dockerfile  README.md  generate_tls_cert.sh  reset_and_run_client.sh  reset_and_run_server.sh
certs/: ca.key  ca.srl  server.crt
client/: CMakeLists.txt
client/build_centos7/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  rat-client-1.0.0-1.x86_64.rpm
client/build_centos7/_CPack_Packages/Linux/RPM/: rpmbuildrat-client.err  rpmbuildrat-client.out
client/build_centos7/_CPack_Packages/Linux/RPM/RPMS/x86_64/: rat-client-1.0.0-1.x86_64.rpm
client/build_centos7/_CPack_Packages/Linux/RPM/SPECS/: rat-client.spec
client/build_ubuntu/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  rat-client_1.0.0_amd64.deb
client/build_ubuntu/_CPack_Packages/Linux/DEB/: rat-client_1.0.0_amd64.deb
client/build_ubuntu/_CPack_Packages/Linux/DEB/rat-client-1.0.0-Linux/: control  data.tar.xz  md5sums
client/build_ubuntu/_CPack_Packages/Linux/DEB/rat-client-1.0.0-Linux/usr/local/etc/rat-client/: ca.crt
client/certs/: client.crt  client.csr  client.key
client/include/: Client.hpp  ClientSecurity.hpp  FileFolderSender.hpp  FileFolderUtils.hpp  FileSender.hpp  ProcessSender.hpp  ProcessUtils.hpp  Utils.hpp
client/src/: Client.cpp  ClientSecurity.cpp  FileFolderSender.cpp  FileFolderUtils.cpp  FileSender.cpp  ProcessSender.cpp  ProcessUtils.cpp  Utils.cpp  main.cpp
common/: CMakeLists.txt
common/build_centos7/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
common/build_ubuntu/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
common/include/: Constants.hpp  NetworkManager.hpp
common/proto/: CMakeLists.txt  Packet.proto
common/proto/build_centos7/: CMakeCache.txt  Makefile  cmake_install.cmake
common/proto/build_ubuntu/: CMakeCache.txt  Makefile  Packet.pb.cc  Packet.pb.h  cmake_install.cmake
common/src/: NetworkManager.cpp
common/tests/: test_network_manager.cpp
server/: CMakeLists.txt
server/certs/: ca.crt  server.csr  server.key
server/include/: DataHandler.hpp  FileReceiver.hpp  FilesFoldersHandler.hpp  ProcessHandler.hpp  Server.hpp  ServerGUI.hpp  ServerSecurity.hpp  Utils.hpp
server/src/: FileReceiver.cpp  FilesFoldersHandler.cpp  ProcessHandler.cpp  Server.cpp  ServerGUI.cpp  ServerSecurity.cpp  Utils.cpp  main.cpp
test_clients/client0/: ca.crt  client.crt  client.csr  client.key  rat_client
test_clients/client1/: client.crt  client.csr  client.key
test_clients/client2/: client.crt  client.csr  client.key  rat_client
test_clients/client3/: rat_client
test_clients/client4/: client.crt  client.key  rat_client
test_server/: ca.key  ca.srl  dh2048.pem  rat_server  server.crt  server.key
unit_tests/test_client/: CMakeLists.txt  test_Client.cpp  test_FileFolderSender.cpp  test_FileFolderUtils.cpp  test_FileSender.cpp  test_ProcessSender.cpp  test_ProcessUtils.cpp  test_Utils.cpp
unit_tests/test_common/: CMakeLists.txt  test_NetworkManager.cpp
unit_tests/test_server/: CMakeLists.txt  test_Utils.cpp
